--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -30,6 +30,9 @@
         @include desktopM {
             width: 310px;
         }
+        @include desktopS{
+            width: 280px;
+        }
     }
     &__characterImg {
         width: 100%;
@@ -46,6 +49,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        @include desktopS{
+            border: 4px solid $color-gray_dark;
+            height: 36px;
+        }
     }
     &__healthPoints {
         display: block;
@@ -236,6 +243,9 @@
         @include desktopM {
             animation: 0.8s  an__monster_attack-desktopM forwards;
         }
+        @include desktopS {
+            animation: 0.8s  an__monster_attack-desktopS forwards;
+        }
     }
     &__explosionWrapper{
         display: flex;
@@ -285,8 +295,12 @@
         @include desktopM{
             animation: 1.5s an__sword_attack-desktopM forwards;
         }
+        @include desktopS{
+            animation: 1.5s an__sword_attack-desktopS forwards;
+        }
     }
 }
+// moving monster
 @keyframes an__monster_attack {
     100%{
         transform: translateX(-630px);
@@ -298,6 +312,12 @@
         transform: translateX(-585px);
     }
 }
+@keyframes an__monster_attack-desktopS{
+    100% {
+        transform: translateX(-520px);
+    }
+}
+// monster attack
 @keyframes an__monster_explosion_grow {
     50%{
         transform: scale(100%);
@@ -308,7 +328,7 @@
 }
 
 
-
+// user attack
 @keyframes an__sword_attack {
     30%{
         transform: scale(50%);
@@ -325,6 +345,17 @@
         transform: translate(790px, 0%)  scale(100%);
     }
 }
+@keyframes an__sword_attack-desktopS {
+    30%{
+        transform: scale(50%);
+    }
+    100% {
+        transform: translate(640px, 0%)  scale(100%);
+    }
+}
+
+
+
 @keyframes an__attack_explosion {
     100% {
         transform:  scale(130%);
